<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addTaskWholePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:actionBarNavMode="list"
    tools:context=".AddTaskPage">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Add Task"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taskTitleTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="My Task"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:labelFor="@id/taskTitleTextView"
        android:text="Task Title"
        app:layout_constraintStart_toStartOf="@+id/taskTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Add Task"
        app:layout_constraintEnd_toEndOf="@+id/chooseImageButton"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="@+id/chooseImageButton"
        app:layout_constraintTop_toBottomOf="@+id/chooseImageButton" />

    <TextView
        android:id="@+id/taskTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Total Tasks: 0"
        app:layout_constraintEnd_toStartOf="@+id/addTaskButton"
        app:layout_constraintTop_toBottomOf="@+id/addTaskButton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/taskDescriptionTextView"
        android:text="Task Description"
        app:layout_constraintStart_toStartOf="@+id/taskDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleTextView" />

    <EditText
        android:id="@+id/taskDescriptionTextView"
        android:layout_width="364dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Do Something"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleTextView" />

    <TextView
        android:id="@+id/submittedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/taskTotalTextView"
        app:layout_constraintEnd_toEndOf="@+id/addTaskButton"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toEndOf="@+id/taskTotalTextView"
        app:layout_constraintTop_toTopOf="@+id/taskTotalTextView" />

    <Spinner
        android:id="@+id/spinnerTeams"
        android:layout_width="257dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDescriptionTextView" />

    <ImageView
        android:id="@+id/imageViewNewTask"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/chooseImageButton"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTeams"
        app:srcCompat="@android:drawable/picture_frame" />

    <Button
        android:id="@+id/chooseImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Browse"
        app:layout_constraintEnd_toEndOf="@+id/spinnerTeams"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTeams" />

</androidx.constraintlayout.widget.ConstraintLayout>