<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="178dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="My Tasks"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainUsername" />

    <ImageView
        android:id="@+id/ImageViewMainActivity"
        android:layout_width="149dp"
        android:layout_height="141dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTitle"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/addTasksButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:text="Add Tasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageViewMainActivity" />

    <Button
        android:id="@+id/allTasksButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:text="All Tasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageViewMainActivity" />

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <TextView
        android:id="@+id/homeUsernameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allTasksButton" />

    <Button
        android:id="@+id/firstTaskButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="firstTask"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/thirdTaskButton"
        app:layout_constraintEnd_toStartOf="@+id/thirdTaskButton"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/thirdTaskButton"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/thirdTaskButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:text="secondTask"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allTasksButton" />

    <Button
        android:id="@+id/secondTaskButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="thirdTask"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/thirdTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toEndOf="@+id/thirdTaskButton"
        app:layout_constraintTop_toTopOf="@+id/thirdTaskButton"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskListRecyclerView"
        android:layout_width="335dp"
        android:layout_height="105dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdTaskButton" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Signup"
        app:layout_constraintBottom_toTopOf="@+id/ConfirmSignUpButton"
        app:layout_constraintEnd_toEndOf="@+id/ConfirmSignUpButton"
        app:layout_constraintStart_toStartOf="@+id/ConfirmSignUpButton" />

    <Button
        android:id="@+id/ConfirmSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Confirm"
        app:layout_constraintStart_toEndOf="@+id/ImageViewMainActivity"
        app:layout_constraintTop_toTopOf="@+id/ImageViewMainActivity" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="login"
        app:layout_constraintEnd_toEndOf="@+id/ConfirmSignUpButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ConfirmSignUpButton"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmSignUpButton" />

    <TextView
        android:id="@+id/textViewMainUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="logout"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        tools:layout_editor_absoluteX="296dp" />
</androidx.constraintlayout.widget.ConstraintLayout>